manifests/api-poi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-depoloyment  
  namespace: api
  labels:
     app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi-pod
  template:
    metadata:
      labels:
        app: poi-pod
    spec:
      containers:
      - name: poi
        image: registrybba6359.azurecr.io/poi:latest
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "kv1-dw-hack"            

---
          
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
  labels:
     app: poi
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: poi-pod

---
