manifests/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress-minion
  namespace: api
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/user/(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80        
      - path: /api/user-java/(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80   
      - path: /api/trips/(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80    
      - path: /api/poi/(.*)
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
